--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </ul>
     </div>
 
-    <div id="cargarDatos">
+    <div id="addDatos">
         <label>Nombre: </label>
         <input type="text" placeholder="Tu nombre">
         <br>
