Ejercicio 1 casi acabado conjuntamente

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
     <div id="addDatos">
         <label>Nombre: </label>
-        <input type="text" placeholder="Tu nombre">
+        <input type="text" placeholder="Tu nombre" id="txtname">
         <br>
 
         <label>Primer Apellido: </label>
-        <input type="text" placeholder="Primer Apellido">
+        <input type="text" placeholder="Primer Apellido" id="txtsubnameone">
         <br>
 
         <label>Segundo Apellido: </label>
-        <input type="text" placeholder="Segundo Apellido">
+        <input type="text" placeholder="Segundo Apellido" id="txtsubnametwo">
         <br>
 
-        <label>Nombre: </label>
-        <input type="text" placeholder="Nacionalidad">
+        <label>Nacionalidad: </label>
+        <input type="text" placeholder="Nacionalidad" id="txtnacionalidad">
         <br>
 
         <button type="submit">Modificar Datos</button>
