Funcionalidad Ejercio1 hecha falta revision

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <input type="text" placeholder="Nacionalidad" id="txtnacionalidad">
         <br>
 
-        <button type="submit">Modificar Datos</button>
+        <button type="submit" onclick="guardarUsuarios()">Modificar Datos</button>
         
     </div>
-        
+        <p id="mensaje"></p>
 <script src="app.js"></script>
 <script>cargarDatos()</script>
 
