--- a/tarjetas.html
+++ b/tarjetas.html
@@ -6,9 +6,20 @@
 </head>
 <body>
     <div id="menu">
+        <h1>BancoPuertollano</h1>
+        <ul >
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="infoCuenta.html">Información Cuenta</a></li>
+            <li><a href="tarjetas.html">Tarjetas</a></li>
+        </ul>
+    </div>
+
+    <div id="infoTarjetas">
        
     </div>
-    
-</body>
+        <p id="mensaje"></p>
+<script src="app.js"></script>
+<script>cargarDatos()</script>
 
+</body>
 </html>
