--- a/tarjetas.html
+++ b/tarjetas.html
@@ -31,10 +31,10 @@
         </table>
         <br><br>
         <label>Numero De tarjeta: </label>
-        <input type="text" placeholder="Numero de tarjeta" id="txtNumTarjeta">
+        <input type="text" placeholder="Numero de tarjeta" maxlength="16" id="txtNumTarjeta">
         <br>
         <label>CCV: </label>
-        <input type="text" placeholder="Numero de tarjeta" id="txtccv">
+        <input type="text" placeholder="Numero de tarjeta" maxlength="3" id="txtccv">
         <br>
         <label>Activo: </label>
         <input type="checkbox" placeholder="Numero de tarjeta" id="isactivo">
