falta tabla dinamica

--- a/tarjetas.html
+++ b/tarjetas.html
@@ -37,9 +37,11 @@
         <input type="text" placeholder="Numero de tarjeta" maxlength="3" id="txtccv">
         <br>
         <label>Activo: </label>
-        <input type="checkbox" placeholder="Numero de tarjeta" id="isactivo">
+        <input type="checkbox" id="isactivo">
         <br>
         <button onclick="guardarTarjeta()">Guardar Tarjeta</button>
+        <p id="mensaje"></p>
+
     </div>
         <p id="mensaje"></p>
 <script src="app.js"></script>
