--- a/InfoCuenta.html
+++ b/InfoCuenta.html
@@ -26,11 +26,11 @@
         <br>
 
         <input type="text" placeholder="Saldo a retirar" id="txtretirar">
-        <button type="submit" onclick="retirarDinero()">Retirar</button>
+        <button type="button" onclick="retirarDinero()">Retirar</button>
         <br>
 
         <input type="text" placeholder="Saldo a ingresar" id="txtingresar">        
-        <button type="submit" onclick="ingresarDinero()">Ingresar</button>
+        <button type="button" onclick="ingresarDinero()">Ingresar</button>
     </div>
         <p id="mensaje"></p>
 <script src="app.js"></script>
