--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div id="menu">
         <h1>BancoPuertollano</h1>
         <ul >
-            <li><a href="index.html" onclick="navegar()">Inicio</a></li>
-            <li><a href="infoCuenta.html" onclick="navegar()">Información Cuenta</a></li>
-            <li><a href="tarjetas.html" onclick="navegar()">Tarjetas</a></li>
+            <li><a href="index.html" onclick="navegarPersona()">Inicio</a></li>
+            <li><a href="infoCuenta.html" onclick="navegarPersona()">Información Cuenta</a></li>
+            <li><a href="tarjetas.html" onclick="navegarPersona()">Tarjetas</a></li>
         </ul>
     </div>
 
