--- a/InfoCuenta.html
+++ b/InfoCuenta.html
@@ -33,7 +33,7 @@
         <button type="button" onclick="ingresarDinero()">Ingresar</button>
     </div>
         <p id="mensaje"></p>
-<script src="app.js"></script>
+<script src="ejercicio2.js"></script>
 <script>cargarDatos()</script>
 
 </body>
