Subida de archivos en el ej3

--- a/tarjetas.html
+++ b/tarjetas.html
@@ -44,7 +44,7 @@
 
     </div>
         <p id="mensaje"></p>
-<script src="app.js"></script>
+<script src="ejercicio3.js"></script>
 <script>cargarDatos()</script>
 
 </body>
