Ejercicio 3 casi acabado

--- a/tarjetas.html
+++ b/tarjetas.html
@@ -17,17 +17,16 @@
     <div id="infoTarjetas">
        <h2>Tarjetas</h2>
        <table>
-        <tr>
-          <th>Número de cuenta</th>
-          <th>Número de tarjeta</th>
-          <th>CCV</th>
-          <th>Activa</th>
-        </tr>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-          </tr>
+            <thead>
+                <tr>
+                    <th>Número de cuenta</th>
+                    <th>Número de tarjeta</th>
+                    <th>Activa</th>
+                </tr>
+            </thead>
+            <tbody id="cuerpoTabla">
+
+            </tbody>
         </table>
         <br><br>
         <label>Numero De tarjeta: </label>
@@ -46,12 +45,5 @@
         <p id="mensaje"></p>
 <script src="ejercicio3.js"></script>
 <script>cargarDatos()</script>
-
-
-
-    
-<script src="app.js"></script>
-<script>cargarDatos()</script>
-
 </body>
 </html>
