--- a/tarjetas.html
+++ b/tarjetas.html
@@ -8,9 +8,9 @@
     <div id="menu">
         <h1>BancoPuertollano</h1>
         <ul >
-            <li><a href="index.html" onclick="navegar()">Inicio</a></li>
-            <li><a href="infoCuenta.html" onclick="navegar()">Información Cuenta</a></li>
-            <li><a href="tarjetas.html" onclick="navegar()">Tarjetas</a></li>
+            <li><a href="index.html" onclick="navegarTarjeta()">Inicio</a></li>
+            <li><a href="infoCuenta.html" onclick="navegarTarjeta()">Información Cuenta</a></li>
+            <li><a href="tarjetas.html" onclick="navegarTarjeta()">Tarjetas</a></li>
         </ul>
     </div>
 
